--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="username">USERNAME</string>
     <string name="password">PASSWORD</string>
     <string name="sign_up">SIGN UP</string>
+    <string name="login">LOGIN</string>
+    <string name="redirect_to_signup">New User? <u><b>Sign Up</b></u></string>
+    <string name="forgot_password">Forgot Password?</string>
 </resources>
