--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="login">LOGIN</string>
     <string name="redirect_to_signup">New User? <u><b>Sign Up</b></u></string>
     <string name="forgot_password">Forgot Password?</string>
+    <string name="email">EMAIL</string>
 </resources>
