--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -18,8 +18,12 @@
     <string name="Setting">Privacy Setting</string>
     <string name="customize_profile">Customize Profile</string>
     <string name="Username">Username</string>
-    <string name="Password">Password</string>
+    <string name="Contact">Contact</string>
     <string name="Description">Description</string>
     <string name="AttendeeCancel">Cancel</string>
     <string name="AttendeeSave">Save</string>
+    <string name="contact">Contact</string>
+    <string name="HomepageDescription">Homepage Description</string>
+    <string name="DeleteImage">Delete Image</string>
+    <string name="CustomizeImage">Edit Image</string>
 </resources>
