Searching function is working in Attendee Page

--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="HomepageDescription">Homepage Description</string>
     <string name="DeleteImage">Delete Image</string>
     <string name="CustomizeImage">Edit Image</string>
+    <string name="View">View</string>
 </resources>
