--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -48,4 +48,8 @@
     <string name="hint_email">superman123@gmail.com</string>
     <string name="hint_homepage_description">I am from Edmonton</string>
     <string name="hint_phone">+1 789 233 233</string>
+    <string name="Eventname">Event Name</string>
+    <string name="create_EventDate">Event Date</string>
+    <string name="AddImage">ADD IMAGE</string>
+    <string name="Confirm">CONFIRM</string>
 </resources>
