--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="chooseOption">CHOOSE AN OPTION</string>
     <string name="accountOption">Account Option</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">Hello fragment</string>
     <string name="account">Account</string>
     <string name="home">Home</string>
     <string name="event">Event</string>
