Add notification file

--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="create_EventDate">Event Date</string>
     <string name="AddImage">ADD IMAGE</string>
     <string name="Confirm">CONFIRM</string>
+    <string name="Previous">Previous</string>
 
 
 </resources>
