--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -53,6 +53,9 @@
     <string name="AddImage">ADD IMAGE</string>
     <string name="Confirm">CONFIRM</string>
     <string name="Previous">Previous</string>
+    <string name="create_event_text">Create Event</string>
+    <string name="create_event_title_text">"Write the Event Name to Create an event upon submission a unique QR Code "</string>
+    <string name="create_event_description">Event Description</string>
 
 
 </resources>
