--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="create_event_title_text">"Write the Event Name to Create an event upon submission a unique QR Code "</string>
     <string name="create_event_description">Event Description</string>
     <string name="edit_event">Edit Event</string>
+    <string name="event_date">Date</string>
 
 
 </resources>
