--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -74,6 +74,8 @@
     <string name="create_announcement_text">Create Announcement</string>
     <string name="Back">Back</string>
     <string name="select_event">Select Event</string>
+    <string name="select_events">Select Events</string>
+    <string name="select">Select</string>
 
 
 </resources>
