--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -81,6 +81,7 @@
     <string name="select">Select</string>
     <string name="scan_your_qr_code">SCAN YOUR QR CODE</string>
     <string name="scan">SCAN</string>
+    <string name="notificationdate">Notification Date</string>
 
 
 </resources>
