--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -82,6 +82,9 @@
     <string name="scan_your_qr_code">SCAN YOUR QR CODE</string>
     <string name="scan">SCAN</string>
     <string name="notificationdate">Notification Date</string>
+    <string name="content">Content</string>
+    <string name="Title">Title</string>
+    <string name="Delete_notification">Delete</string>
 
 
 </resources>
