--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -81,6 +81,9 @@
     <string name="select">Select</string>
     <string name="scan_your_qr_code">SCAN YOUR QR CODE</string>
     <string name="scan">SCAN</string>
+    <string name="gallery">Gallery</string>
+    <string name="check_in">Check In</string>
+    <string name="scan_cancelled">Scan Cancelled</string>
 
 
 </resources>
