--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -93,4 +93,5 @@
     <string name="content">Content</string>
     <string name="Title">Title</string>
     <string name="Delete_notification">Delete</string>
+    <string name="notif_placeholder">Notif Placeholder</string>
 </resources>
