--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -103,4 +103,5 @@
     <string name="last_check_in_march_25_2024">Last check-in: March 25, 2024</string>
     <string name="view">View</string>
     <string name="google_maps_key">GOOGLE_MAPS_KEY</string>
+    <string name="restrictiontext">Maximum 1000 characters including spaces</string>
 </resources>
