--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -105,4 +105,7 @@
     <string name="google_maps_key">GOOGLE_MAPS_KEY</string>
     <string name="restrictiontext">Maximum 1000 characters including spaces</string>
     <string name="history">History</string>
+    <string name="Number_of_limite_attendees">number_of_limite_attendees</string>
+    <string name="Number_of_limit_attendees">Number_of_limit_attendees</string>
+    <string name="sign_up_limit">Sign Up Limit(Optional)</string>
 </resources>
