--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -156,4 +156,5 @@
         <item>Check-ins</item>
         <item>Sign-ups</item>
     </string-array>
+    <string name="default_notification_channel_id">my_notification_channel_id</string>
 </resources>
