--- a/EventApp/app/src/main/res/values/strings.xml
+++ b/EventApp/app/src/main/res/values/strings.xml
@@ -157,4 +157,5 @@
         <item>Sign-ups</item>
     </string-array>
     <string name="default_notification_channel_id">my_notification_channel_id</string>
+    <string name="button">Button</string>
 </resources>
